Icono de Snake establecido , mejoras en el codigo y revisar errores

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,6 @@ flutter:
     - ContenidoVisual/videointro.mp4
     - ContenidoVisual/SNAKE.jpg
     - ContenidoVisual/SNAKEoscuro.png
-    - ContenidoVisual/RICK.wav
-    - ContenidoVisual/Girl.wav
+    - ContenidoVisual/RICK.mp3
+    - ContenidoVisual/Girl.mp3
     - ContenidoVisual/introgirl.mp4
